Fix button offset problem when text placed in button was too long button changed its position. Its no longer the case

--- a/game/room-list/room-list-style.css
+++ b/game/room-list/room-list-style.css
@@ -18,11 +18,12 @@ body
 
 #sub_div_buttons_in_row
 {
+    display:flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
     margin-bottom: 100px;
-    height: 50%;
+    height: 10%;
     width: 100%;
 }
 
